package com.example.carbon_credit.DTO;
import lombok.Data;
@Data
public class LoginRequestDTO {
    private String address;
    private String message;
    private String Signature;
}
