package com.example.carbon_credit.DTO;

import jakarta.validation.constraints.*;
import lombok.AllArgsConstructor;
import lombok.Builder;
import lombok.Data;
import lombok.NoArgsConstructor;

import java.math.BigDecimal;

@Data
@Builder
@NoArgsConstructor
@AllArgsConstructor
public class PlaceOrderCommandDTO {

    // orderId should be generated by backend, not sent by client
    private String orderId;

    // userId should be extracted from JWT, not sent by client
    private String userId;

    @NotBlank(message = "Credit ID is required")
    private String creditId;

    @NotBlank(message = "Order type is required")
    @Pattern(regexp = "BUY|SELL", message = "Order type must be BUY or SELL")
    private String orderType;

    @NotBlank(message = "Order condition is required")
    @Pattern(regexp = "LIMIT|MARKET", message = "Order condition must be LIMIT or MARKET")
    private String orderCondition;

    private BigDecimal price;

    @NotNull(message = "Amount is required")
    @Min(value = 1, message = "Amount must be at least 1")
    private Integer amount;
}