classDiagram
    %% ==================== CONTROLLERS ====================
    class AuthController {
        +login(LoginRequestDTO) ResponseEntity
    }
    class ProjectController {
        +getAllProjects()
        +createProject(ProjectUploadDto)
        +approveProject(String)
        +rejectProject(String)
    }
    class OrderController {
        +placeOrder(PlaceOrderCommandDTO)
        +cancelOrder(String)
        +getOrderBook(String)
    }
    class CertificateController {
        +getMyCertificates()
        +getCertificateDetail(String)
    }
    class RetireRequestController {
        +createRetireRequest(RetireRequestDTO)
    }
    class MarketController

    %% ==================== RELEVANT DTOs ====================
    class LoginRequestDTO {
        -String address
        -String message
        -String signature
    }
    class LoginResponse {
        -String token
        -UserDTO user
    }
    class ProjectUploadDto {
        -String name
        -String location
        -Integer vintage
        -String description
        -Long totalAmount
        -MultipartFile image
        -MultipartFile document
    }
    class PlaceOrderCommandDTO {
        -String orderId
        -String userId
        -String creditId
        -String orderType
        -BigDecimal price
        -Integer amount
        -Long timestamp
    }
    class RetireRequestDTO {
        -String onchainTxHash
        -String nftTokenId
        -String reason
        -List~RetireRecordDTO~ records
    }

    %% ==================== RELATIONSHIPS ====================
    AuthController ..> LoginRequestDTO : Uses
    AuthController ..> LoginResponse : Returns
    ProjectController ..> ProjectUploadDto : Uses
    OrderController ..> PlaceOrderCommandDTO : Uses
    RetireRequestController ..> RetireRequestDTO : Uses
